--- a/upload.html
+++ b/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADZU Research Archive</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="u.css">
 </head>
 <body onload="checkLoginStatus()">
 
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="login.html">Login</a></li>
             </ul>
-            <img src="logo.png" alt="ADZU logo" class="logo"
+            <img src="logo.png" alt="ADZU Logo" class="logo">
         </nav>
     </header>
 
@@ -26,8 +26,8 @@
             <button id="searchButton">Search</button>
         </div>
 
-        <!-- Upload Section - Hidden by Default -->
-        <section class="upload-section" id="upload-section" style="display: none;">
+        <!-- Upload Section -->
+        <section class="upload-section">
             <div class="container">
                 <h2>Upload Research Paper</h2>
                 <input type="file" id="fileUpload" accept=".pdf,.doc,.docx">
@@ -42,7 +42,29 @@
         </div>
     </main>
 
+    <script>
+        function checkLoginStatus() {
+            // Function to check if user is logged in (pseudo-code for example)
+            // This can be replaced with real logic to check login status
+            const isLoggedIn = true; // Example: change based on login status
 
+            if (isLoggedIn) {
+                document.querySelector(".upload-section").style.display = "block";
+            }
+        }
+
+        function uploadFile() {
+            const fileInput = document.getElementById('fileUpload');
+            const file = fileInput.files[0];
+
+            if (file) {
+                alert(`File "${file.name}" selected for upload!`);
+                // Add upload functionality here
+            } else {
+                alert("Please select a file to upload.");
+            }
+        }
+    </script>
 
 </body>
 </html>
