--- a/login.html
+++ b/login.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page - AdZU SHS Digital Archive</title>
+  <link rel="stylesheet" href="Ls.css">
+</head>
+<body>
 
+<header>
+  <img src="logo.png" alt="Logo" class="logo">
+  <h1>AdZU SHS Digital Archive</h1>
+</header>
+
+<section class="login-section">
+  <div class="container">
+    <h2>Login to Your Account</h2>
+    <form id="login-form" onsubmit="validateLogin(); return false;">
+      <div class="input-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Enter your email" required>
+      </div>
+      <div class="input-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter your password" required>
+      </div>
+      <button type="submit" class="login-button">Login</button>
+      <p><a href="#" class="forgot-password">Forgot Password?</a></p>
+    </form>
+  </div>
+</section>
+
+<script>
+  function validateLogin() {
+    const emailInput = document.getElementById("email").value;
+    const passwordInput = document.getElementById("password").value;
+
+    if (emailInput && passwordInput) {
+      // Simulate successful login
+      alert("Login successful!");
+
+      // Redirect to another page (e.g., dashboard.html)
+      window.location.href = "upload.html"; // Change to your desired page
+    } else {
+      alert("Please enter both email and password.");
+    }
+  }
+</script>
+
+</body>
+</html>
